Removing console frameworks

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_Store
 Projects/Template/macOS/third-party/
 Projects/Template/macOS/macOS/Frameworks/
+Projects/Template/macOS/console/Frameworks/
